logistic_map/logs/output.log
  File "/work/pnovelli/dp_examples/logistic_map/run.py", line 290
    logger.info(ff"VAMPNets::Seed {rng_seed + 1}/{configs.num_rng_seeds}")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/work/pnovelli/dp_examples/logistic_map/run.py", line 290
    logger.info(ff"VAMPNets::Seed {rng_seed + 1}/{configs.num_rng_seeds}")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/work/pnovelli/dp_examples/logistic_map/run.py", line 290
    logger.info(ff"VAMPNets::Seed {rng_seed + 1}/{configs.num_rng_seeds}")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/work/pnovelli/dp_examples/logistic_map/run.py", line 290
    logger.info(ff"VAMPNets::Seed {rng_seed + 1}/{configs.num_rng_seeds}")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/work/pnovelli/dp_examples/logistic_map/run.py", line 290
    logger.info(ff"VAMPNets::Seed {rng_seed + 1}/{configs.num_rng_seeds}")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
